--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
   "name": "nepse-scraper-api",
   "version": "1.0.0",
-  "description": "NEPSE data scraper with Swagger API documentation",
+  "description": "NEPSE Stock Exchange Data Scraper API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [
-    "nepse",
-    "scraper",
-    "puppeteer",
-    "swagger",
-    "nepal stock exchange"
-  ],
+  "keywords": ["nepse", "stock", "scraper", "api"],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "puppeteer": "^21.5.0",
-    "puppeteer-core": "^24.26.1",
+    "express": "^4.18.2",
+    "puppeteer": "^21.6.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
